src/test/ui/feature-gate/issue-43106-gating-of-stable.stderr
error[E0601]: main function not found

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:17:1
   |
17 | #![stable                     = "1300"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:20:1
   |
20 | #[stable = "1300"]
   | ^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:23:17
   |
23 |     mod inner { #![stable="1300"] }
   |                 ^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:26:5
   |
26 |     #[stable = "1300"] fn f() { }
   |     ^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:29:5
   |
29 |     #[stable = "1300"] struct S;
   |     ^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:32:5
   |
32 |     #[stable = "1300"] type T = S;
   |     ^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:35:5
   |
35 |     #[stable = "1300"] impl S { }
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

